# codecrafters-bittorrent-python

./: .gitignore  README.md  pyproject.toml  ruff.toml
app/: app.py  bencode.py  client.py  main.py  message.py  metainfo.py  peers.py  piece.py
app/protocol/: __init__.py  bencode.py  client.py  datagram.py  files.py  handshake.py  magnet.py  message.py  metainfo.py  peer.py  peers.py  piece.py  tracker.py  udp.py
app/protocol/peer/: __init__.py  messages.py  peer.py
app/protocol/tracker/: __init__.py  announce.py  messages.py  tcp.py  tracker.py  udp.py
