[project]
name = "codecrafters-bittorrent-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["aiohttp[speedups]>=3.11.11"]

[dependency-groups]
dev = ["mypy>=1.14.1", "ruff>=0.9.6", "vulture>=2.14"]

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "A", "AIR", "ANN", "ARG", "ASYNC", "B", "BLE", "C4", "COM", "DJ", "DTZ",
    "E", "EXE", "F", "FA", "FLY", "FURB", "G", "I", "ICN", "INP", "INT", "ISC",
    "LOG", "PERF", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "Q", "RET", "RSE", "RUF",
    "SIM", "SLF", "SLOT", "T10", "TC", "TCH", "TID", "TRY", "UP", "W", "YTT",
]
ignore = ["E501", "FURB118", "ISC001", "PLR0912", "PLR0913", "PLR2004", "TRY003"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.vulture]
exclude = []
ignore_decorators = []
ignore_names = []
make_whitelist = false
min_confidence = 50
paths = ["app"]
sort_by_size = true
verbose = false
